Wed Mar 22 22:52:53 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Well, it might be an idea to tell wget to ignore server-cached
	data when reloading webcams :)
	DOH!

Wed Mar 22 19:57:04 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Better man page. Examples of cool usage.

Wed Mar 22 18:17:11 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Man page! Whee!

Wed Mar 22 04:14:12 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Added format specifiers for actions. %w width, %h height, %p
	pixels, %s size, %t type (jpeg etc).

Wed Mar 22 03:50:24 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* User definable actions for slideshow and multiwindow modes. Use
	-X or --action STRING to define an action. The action will be run
	when the ENTER key is pressed. The action should be in the form of
	a shell command, using %f to represent the image filename
	(including path), and %n to refer to it's name. Example:
	feh -X "mv %f ~/images/%n"
	Use this to go through some images and pick out the good ones :)
	More format specifiers will follow...

Wed Mar 22 02:55:37 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Okay. I found a naughty bug of mine. If the last image of a
	montage/index was not loadable - core was dumped. Nice bug. Fun to
	find =) I blame redhat.

Tue Mar 21 15:45:02 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Major cruft removal and tidying of code path. Progressive
	loading code slightly less complex now.

Tue Mar 21 15:18:08 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Big optimisation for progressive loading in fullscreen mode. I
	was recreating the pixmap at every iteration - damnit ;)

Mon Mar 20 21:54:22 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Dammit. Why do I find these things *after* a release?

Mon Mar 20 19:24:46 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Released 0.7.0

Sun Mar 19 20:55:57 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Main event loop tidy up.
