@@ -56,6 +56,10 @@ unloadable files. Useful for preening a directory.
 .B feh
 also has the ability to load files over http or ftp, simply specify the url
 on the commandline.
+.PP
+.B feh
+can read options from the commandline or from the enironment variable
+FEH_OPTIONS. The syntax is the same in each case.
 .SH OPTIONS
 .TP 5
 .B -h, --help
